# game_ggml_cli

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
cmake/patches/: ggml-metal-binary-archive.patch
examples/external_consumer/: CMakeLists.txt  README.md  main.cpp
include/game_ggml/: config.h  decode.h  errors.h  game_ggml.h  mel.h  model.h  types.h  version.h
scripts/: README.md  align_demo.py  benchmark_align.py  convert_pt_to_gguf.py  dump_reference.py  inspect_gguf.py  requirements.txt
src/: backend.cpp  backend.h  d3pm.cpp  d3pm.h  decode.cpp  gguf_io.cpp  gguf_io.h  mel.cpp  model.cpp  model_encoder.cpp  model_encoder.h  model_estimator.cpp  model_estimator.h  model_impl.h  model_segmenter.cpp  model_segmenter.h  ops_attn.cpp  ops_attn.h  ops_basic.cpp  ops_basic.h  ops_ffn.cpp  ops_ffn.h  ops_joint_attn.cpp  ops_joint_attn.h  ops_rope.cpp  ops_rope.h  rng.cpp  rng.h  tensor_utils.cpp  tensor_utils.h
src/cli/: main.cpp  midi_writer.cpp  midi_writer.h  slicer.cpp  slicer.h  text_writer.cpp  text_writer.h  wav_io.cpp  wav_io.h
tests/: CMakeLists.txt  test_backend.cpp  test_cli.cpp  test_encoder.cpp  test_estimator.cpp  test_gguf_io.cpp  test_mel.cpp  test_ops_basic.cpp  test_ops_ffn.cpp  test_ops_rope.cpp  test_pipeline_e2e.cpp  test_segmenter.cpp
tests/support/: ggml_test_env.cpp  ggml_test_env.h  reference_io.cpp  reference_io.h
